fix mobile alignment for music pagel

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -184,8 +184,9 @@ audio::-webkit-media-controls-volume-slider-container {
     }
 
     #minilogue-img {
-        width: 400px;
+        width: 300px;
         height: auto;
+        margin-top: 30px;
     }
 
     
